more random items

--- a/Resources/Prototypes/Entities/Objects/Misc/books.yml
+++ b/Resources/Prototypes/Entities/Objects/Misc/books.yml
@@ -1,6 +1,6 @@
 - type: entity
   name: book
-  parent: BaseItem
+  parent: [BaseItem, RecyclableItemPaper] # Frontier: added RecyclableItemPaper
   id: BookBase
   description: A hardcover book.
   components:
