--- a/Resources/Prototypes/Entities/Objects/Specific/Janitorial/soap.yml
+++ b/Resources/Prototypes/Entities/Objects/Specific/Janitorial/soap.yml
@@ -50,6 +50,11 @@
         reagents:
         - ReagentId: SoapReagent
           Quantity: 50
+  - type: Extractable # Frontier
+    juiceSolution: # Frontier
+      reagents: # Frontier
+        - ReagentId: SoapReagent # Frontier
+          Quantity: 10 # Frontier
   - type: SolutionTransfer
     transferAmount: 10
     minTransferAmount: 1
