--- a/Resources/Prototypes/Entities/Objects/Specific/chemistry.yml
+++ b/Resources/Prototypes/Entities/Objects/Specific/chemistry.yml
@@ -510,7 +510,7 @@
 - type: entity
   name: pill canister
   id: PillCanister
-  parent: BaseStorageItem
+  parent: [BaseStorageItem, RecyclableItemPlasticTiny] # Frontier: added RecyclableItemPlasticTiny
   description: Holds up to 10 pills.
   components:
   - type: Item
