instruments and flags

--- a/Resources/Prototypes/Entities/Objects/Fun/Instruments/base_instruments.yml
+++ b/Resources/Prototypes/Entities/Objects/Fun/Instruments/base_instruments.yml
@@ -1,7 +1,7 @@
 - type: entity
   abstract: true
   parent: BaseItem
-  id: BaseHandheldInstrument
+  id: [BaseHandheldInstrument, RecyclableItemWoodMedium] # Frontier: added RecyclableItemWoodMedium
   description: That's an instrument.
   components:
   - type: Sprite
