--- a/Resources/Prototypes/_NF/Entities/Objects/base_recyclable_items.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/base_recyclable_items.yml
@@ -98,3 +98,13 @@
   - type: PhysicalComposition
     materialComposition:
       Biomass: 1
+
+# Wood
+## Medium
+- type: entity # Musical instruments etc
+  id: RecyclableItemWoodMedium
+  abstract: true
+  components:
+  - type: PhysicalComposition
+    materialComposition:
+      Wood: 200
