--- a/Resources/Prototypes/Entities/Objects/Specific/Janitorial/soap.yml
+++ b/Resources/Prototypes/Entities/Objects/Specific/Janitorial/soap.yml
@@ -1,7 +1,7 @@
 - type: entity
   name: soap
   id: Soap
-  parent: BaseItem
+  parent: [BaseItem, RecyclableItemOrganicTiny] # Frontier: added RecyclableItemOrganicTiny
   description: A cheap bar of soap. Doesn't smell.
   components:
   - type: Tag
@@ -50,11 +50,6 @@
         reagents:
         - ReagentId: SoapReagent
           Quantity: 50
-  - type: Extractable # Frontier
-    juiceSolution: # Frontier
-      reagents: # Frontier
-        - ReagentId: SoapReagent # Frontier
-          Quantity: 10 # Frontier
   - type: SolutionTransfer
     transferAmount: 10
     minTransferAmount: 1
