encryption keys, cartons

--- a/Resources/Prototypes/_NF/Entities/Objects/base_recyclable_items.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/base_recyclable_items.yml
@@ -69,7 +69,7 @@
 
 # Devices
 ## Tiny
-- type: entity # Machine parts etc
+- type: entity # Machine parts, encryption keys etc
   id: RecyclableItemDeviceTiny
   abstract: true
   components:
