--- a/Resources/Prototypes/_NF/Entities/Structures/Storage/Closets/wall_lockers_department.yml
+++ b/Resources/Prototypes/_NF/Entities/Structures/Storage/Closets/wall_lockers_department.yml
@@ -154,6 +154,41 @@
       map: ["enum.LockVisualLayers.Lock"]
 
 - type: entity
+  id: LockerWallColorMedicalDoctorFilled
+  parent: LockerWallColorMedical
+  name: medical doctor's wall locker
+  suffix: Filled, Frontier
+  components:
+  - type: StorageFill
+    contents:
+      - id: HandheldHealthAnalyzer
+#        prob: 0.6
+      - id: ClothingHandsGlovesLatex
+#      - id: ClothingHeadsetMedical # Frontier
+      - id: ClothingEyesHudMedical # Frontier
+#      - id: ClothingBeltMedical
+#      - id: ClothingHeadHatSurgcapGreen
+#        prob: 0.1
+#        orGroup: Surgcaps
+#      - id: ClothingHeadHatSurgcapPurple
+#        prob: 0.05
+#        orGroup: Surgcaps
+#      - id: ClothingHeadHatSurgcapBlue
+#        prob: 0.90
+#        orGroup: Surgcaps
+#      - id: UniformScrubsColorBlue
+#        prob: 0.5
+#        orGroup: Surgshrubs
+#      - id: UniformScrubsColorGreen
+#        prob: 0.1
+#        orGroup: Surgshrubs
+#      - id: UniformScrubsColorPurple
+#        prob: 0.05
+#        orGroup: Surgshrubs
+      - id: ClothingMaskSterile
+      - id: ClothingBeltMedicalFilled # Frontier
+      
+- type: entity
   id: LockerWallColorMedicalFilled
   parent: LockerWallColorMedical
   name: medicine wall locker
