Caveman smite, foam club

--- a/Resources/Prototypes/_NF/Accents/word_replacements.yml
+++ b/Resources/Prototypes/_NF/Accents/word_replacements.yml
@@ -915,6 +915,11 @@
     accent-caveman-replaced-131: accent-caveman-replacement-131
     accent-caveman-replaced-132: accent-caveman-replacement-132
     accent-caveman-replaced-133: accent-caveman-replacement-133
+    accent-caveman-replaced-134: accent-caveman-replacement-134
+    accent-caveman-replaced-135: accent-caveman-replacement-135
+    accent-caveman-replaced-136: accent-caveman-replacement-136
+    accent-caveman-replaced-137: accent-caveman-replacement-137
+    accent-caveman-replaced-138: accent-caveman-replacement-138
     # Forbidden words
     accent-caveman-forbidden-0: accent-caveman-forbidden-empty
     accent-caveman-forbidden-1: accent-caveman-forbidden-empty
@@ -932,3 +937,5 @@
     accent-caveman-forbidden-13: accent-caveman-forbidden-empty
     accent-caveman-forbidden-14: accent-caveman-forbidden-empty
     accent-caveman-forbidden-15: accent-caveman-forbidden-empty
+    accent-caveman-forbidden-16: accent-caveman-forbidden-empty
+    accent-caveman-forbidden-17: accent-caveman-forbidden-empty
