--- a/Resources/Prototypes/_NF/Entities/Objects/base_recyclable_items.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/base_recyclable_items.yml
@@ -30,6 +30,15 @@
     materialComposition:
       Steel: 10
 
+## Small
+- type: entity # Weapon magazines idk
+  id: RecyclableItemSteelSmall
+  abstract: true
+  components:
+  - type: PhysicalComposition
+    materialComposition:
+      Steel: 20
+
 ## Medium
 - type: entity # Jaws of life, toolboxes idk
   id: RecyclableItemSteelMedium
