--- a/Resources/Prototypes/Entities/Objects/Weapons/Guns/Ammunition/Magazines/pistol.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Guns/Ammunition/Magazines/pistol.yml
@@ -1,7 +1,7 @@
 - type: entity
   id: BaseMagazinePistol
   name: pistol magazine (.35 auto)
-  parent: [ BaseItem, BaseC1Contraband ] # Frontier: BaseRestrictedContraband<BaseC1Contraband
+  parent: [ BaseItem, BaseC1Contraband, RecyclableItemSteelSmall ] # Frontier: BaseRestrictedContraband<BaseC1Contraband, added RecyclableItemSteelSmall
   abstract: true
   components:
   - type: Tag
@@ -34,7 +34,7 @@
 - type: entity
   id: BaseMagazinePistolHighCapacity
   name: machine pistol magazine (.35 auto)
-  parent: BaseItem
+  parent: [BaseItem, RecyclableItemSteelSmall] # Frontier: added RecyclableItemSteelSmall
   abstract: true
   components:
   - type: Tag
