--- a/Resources/Prototypes/_NF/Entities/Objects/base_recyclable_items.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/base_recyclable_items.yml
@@ -31,7 +31,7 @@
       Steel: 10
 
 ## Small
-- type: entity # Weapon magazines idk
+- type: entity # Weapon magazines, grenades idk
   id: RecyclableItemSteelSmall
   abstract: true
   components:
