tabletop games, dropper, pickaxe

--- a/Resources/Prototypes/Entities/Objects/Specific/chemistry.yml
+++ b/Resources/Prototypes/Entities/Objects/Specific/chemistry.yml
@@ -269,7 +269,7 @@
 
 - type: entity
   name: dropper
-  parent: BaseItem
+  parent: [BaseItem, RecyclableItemGlassTiny] # Frontier: added RecyclableItemGlassTiny
   description: Used to transfer small amounts of chemical solution between containers.
   id: Dropper
   components:
