--- a/Resources/Prototypes/_NF/Entities/Objects/base_recyclable_items.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/base_recyclable_items.yml
@@ -20,6 +20,16 @@
     materialComposition:
       Paper: 50
 
+# Glass
+## Tiny
+- type: entity # Dropper etc
+  id: RecyclableItemGlassTiny
+  abstract: true
+  components:
+  - type: PhysicalComposition
+    materialComposition:
+      Glass: 10
+
 # Steel
 ## Tiny
 - type: entity # Flares idk
