--- a/Resources/Maps/_NF/Shuttles/caduceus.yml
+++ b/Resources/Maps/_NF/Shuttles/caduceus.yml
@@ -700,161 +700,158 @@ entities:
       version: 2
       data:
         tiles:
-          0,-3:
-            0: 65535
-          0,-2:
-            0: 65535
-          0,-1:
-            0: 65523
-            1: 12
-          0,0:
-            0: 65535
-          0,1:
-            0: 65535
-          0,2:
-            0: 65531
-            1: 4
           0,-4:
-            0: 32767
-            1: 32768
+            0: 48954
+          -1,-4:
+            0: 57339
+          0,-3:
+            0: 43698
+          -1,-3:
+            0: 56824
+          0,-2:
+            0: 65470
+          -1,-2:
+            0: 49080
+          0,-1:
+            0: 65327
+          -1,-1:
+            0: 65419
+          0,0:
+            0: 12287
+          0,-5:
+            0: 41472
           1,-4:
-            0: 61439
-            1: 4096
+            0: 57295
           1,-3:
-            0: 65407
-            2: 128
+            0: 65520
           1,-2:
-            0: 65535
+            0: 13087
+            1: 32768
           1,-1:
-            0: 13175
-            3: 1024
+            0: 4355
+            1: 1088
+          1,-5:
+            0: 61440
+            1: 128
+          1,0:
+            0: 273
+            1: 1024
           2,-4:
-            0: 65535
-          2,-3:
-            0: 5119
+            0: 48063
           2,-2:
-            0: 17
+            1: 16
+          2,-3:
+            1: 704
           3,-4:
             0: 65535
           3,-3:
-            0: 249
-            1: 6
-            3: 3584
-          0,3:
-            0: 140
-          1,0:
-            0: 63283
-          1,1:
-            0: 65535
-          1,2:
-            0: 65535
-          1,3:
-            0: 4095
-          2,0:
-            0: 13088
-          2,1:
-            0: 13107
-          2,2:
-            0: 4371
-          2,3:
-            0: 273
-          0,-5:
-            0: 65280
-          1,-5:
-            0: 49092
-            1: 16384
-          2,-5:
-            0: 65280
-          3,-5:
-            0: 57340
-            1: 8192
-          3,-6:
-            0: 32768
-          -3,0:
-            0: 34944
-          -3,1:
-            0: 34952
-          -3,2:
-            0: 8
-          -2,0:
-            0: 64908
-          -2,1:
-            0: 65535
-          -2,2:
-            0: 65535
-          -2,3:
-            0: 4095
-          -1,0:
-            0: 65535
-          -1,1:
-            0: 65023
-            1: 512
-          -1,2:
-            0: 65519
             1: 16
+            0: 14
+          3,-5:
+            0: 63688
+            1: 52
+          4,-4:
+            0: 4437
+          4,-3:
+            0: 1
+            1: 36
+          -1,0:
+            0: 36863
+          0,1:
+            0: 12287
+          -1,1:
+            0: 36863
+          0,2:
+            0: 1911
+          -1,2:
+            0: 7645
+          0,3:
+            1: 12
+          1,1:
+            0: 12159
+          1,2:
+            0: 65527
+          1,3:
+            1: 3600
+            0: 14
+          2,1:
+            0: 771
+          2,3:
+            1: 272
+          2,0:
+            1: 288
+          2,2:
+            1: 2
+          -1,-5:
+            0: 47104
+          2,-5:
+            1: 3840
+          3,-6:
+            1: 32768
+          4,-6:
+            0: 4096
+            1: 258
+          4,-5:
+            0: 4211
+          -3,0:
+            1: 128
+          -2,0:
+            1: 1284
+          -3,1:
+            0: 2056
+          -2,1:
+            0: 36815
+          -3,2:
+            1: 8
+          -2,2:
+            0: 61164
+          -2,3:
+            1: 2832
+            0: 14
           -1,3:
-            0: 279
+            1: 22
           -4,-4:
             0: 65535
-          -4,-3:
-            0: 255
-            3: 3840
-          -3,-4:
-            0: 65535
-          -3,-3:
-            0: 2303
-          -2,-4:
-            0: 65535
-          -2,-3:
-            0: 64991
-            1: 544
-          -2,-2:
-            0: 60095
-            1: 1088
-          -2,-1:
-            0: 35020
-            3: 1024
-          -1,-4:
-            0: 49151
-            1: 16384
-          -1,-3:
-            0: 65535
-          -1,-2:
-            0: 65535
-          -1,-1:
-            0: 65279
-            4: 256
-          -4,-6:
-            0: 12544
           -4,-5:
-            0: 65527
-          -3,-5:
-            0: 65296
-          -2,-5:
-            0: 65380
-          -1,-5:
-            0: 65280
-          -5,-4:
-            0: 52428
+            0: 62067
+            1: 132
+          -4,-3:
+            0: 15
           -5,-3:
-            0: 140
-          -5,-7:
-            0: 16384
-          -5,-6:
-            0: 52428
+            1: 132
+          -3,-4:
+            0: 57341
+          -3,-3:
+            1: 2160
+          -3,-5:
+            0: 4096
+            1: 3600
+          -2,-4:
+            0: 61438
+          -2,-3:
+            0: 61152
+          -2,-2:
+            1: 8208
+            0: 36032
+          -2,-5:
+            0: 57344
+            1: 288
+          -2,-1:
+            1: 1088
+            0: 8
+          -4,-6:
+            1: 8448
+            0: 4096
           -5,-5:
-            0: 52428
-          4,-4:
-            0: 30583
-          4,-3:
-            0: 55
-            3: 256
-          4,-6:
-            0: 30566
-          4,-5:
-            0: 30583
+            0: 200
+          -5,-4:
+            1: 68
+          -5,-7:
+            1: 16384
+          -5,-6:
+            1: 8
           4,-7:
-            0: 16384
+            1: 16384
         uniqueMixes:
         - volume: 2500
           temperature: 293.15
@@ -872,55 +869,10 @@ entities:
           - 0
           - 0
         - volume: 2500
-          temperature: 293.14996
-          moles:
-          - 20.078888
-          - 75.53487
-          - 0
-          - 0
-          - 0
-          - 0
-          - 0
-          - 0
-          - 0
-          - 0
-          - 0
-          - 0
-        - volume: 2500
-          temperature: 293.1499
-          moles:
-          - 18.472576
-          - 69.49208
-          - 0
-          - 0
-          - 0
-          - 0
-          - 0
-          - 0
-          - 0
-          - 0
-          - 0
-          - 0
-        - volume: 2500
-          temperature: 293.15
+          immutable: True
           moles:
           - 0
           - 0
-          - 0
-          - 0
-          - 0
-          - 0
-          - 0
-          - 0
-          - 0
-          - 0
-          - 0
-          - 0
-        - volume: 2500
-          temperature: 293.14996
-          moles:
-          - 21.824879
-          - 82.10312
           - 0
           - 0
           - 0
@@ -3702,7 +3654,7 @@ entities:
       parent: 1
 - proto: CaduceusMothershipComputer
   entities:
-  - uid: 1117
+  - uid: 40
     components:
     - type: Transform
       pos: -1.5,6.5
