--- a/Resources/Prototypes/Entities/Objects/Specific/chemistry.yml
+++ b/Resources/Prototypes/Entities/Objects/Specific/chemistry.yml
@@ -462,7 +462,7 @@
 
 - type: entity
   name: pill
-  parent: BaseItem
+  parent: [BaseItem, RecyclableItemOrganicTiny] # Frontier: added RecyclableItemOrganicTiny
   id: Pill
   description: It's not a suppository.
   components:
