--- a/Resources/Maps/_NF/Shuttles/Nfsd/templar.yml
+++ b/Resources/Maps/_NF/Shuttles/Nfsd/templar.yml
@@ -319,7 +319,7 @@ entities:
   - uid: 12
     components:
     - type: Transform
-      pos: -1.5,0.5
+      pos: -0.5,1.5
       parent: 1
   - uid: 41
     components:
@@ -330,6 +330,21 @@ entities:
     components:
     - type: Transform
       pos: -1.5,2.5
+      parent: 1
+  - uid: 154
+    components:
+    - type: Transform
+      pos: 0.5,1.5
+      parent: 1
+  - uid: 155
+    components:
+    - type: Transform
+      pos: 1.5,1.5
+      parent: 1
+  - uid: 156
+    components:
+    - type: Transform
+      pos: 2.5,1.5
       parent: 1
 - proto: CableMV
   entities:
@@ -392,6 +407,12 @@ entities:
     - type: Transform
       rot: 3.141592653589793 rad
       pos: 0.5,3.5
+      parent: 1
+  - uid: 157
+    components:
+    - type: Transform
+      rot: 1.5707963267948966 rad
+      pos: -1.5,-0.5
       parent: 1
 - proto: ClosetWallOrangeFilled
   entities:
@@ -695,12 +716,24 @@ entities:
       parent: 1
     - type: AtmosPipeColor
       color: '#990000FF'
-- proto: GravityGeneratorMini
+- proto: GeneratorWallmountAPU
   entities:
   - uid: 40
     components:
     - type: Transform
-      pos: -1.5,-0.5
+      pos: -1.5,1.5
+      parent: 1
+  - uid: 72
+    components:
+    - type: Transform
+      pos: 2.5,1.5
+      parent: 1
+- proto: GravityGeneratorMini
+  entities:
+  - uid: 36
+    components:
+    - type: Transform
+      pos: -1.5,0.5
       parent: 1
 - proto: Grille
   entities:
@@ -784,13 +817,6 @@ entities:
     components:
     - type: Transform
       pos: 1.5,2.5
-      parent: 1
-- proto: LockerWallMaterialsFuelPlasmaFilled
-  entities:
-  - uid: 72
-    components:
-    - type: Transform
-      pos: -1.5,1.5
       parent: 1
 - proto: NitrogenCanister
   entities:
@@ -895,17 +921,6 @@ entities:
       rot: -1.5707963267948966 rad
       pos: 2.5,5.5
       parent: 1
-- proto: PortableGeneratorPacmanShuttle
-  entities:
-  - uid: 36
-    components:
-    - type: Transform
-      pos: -1.5,0.5
-      parent: 1
-    - type: FuelGenerator
-      on: False
-    - type: Physics
-      bodyType: Static
 - proto: PoweredlightColoredRed
   entities:
   - uid: 28
@@ -944,11 +959,11 @@ entities:
       parent: 1
 - proto: SmallGyroscopeSecurity
   entities:
-  - uid: 67
+  - uid: 55
     components:
     - type: Transform
-      rot: 3.141592653589793 rad
-      pos: 1.5,4.5
+      rot: 1.5707963267948966 rad
+      pos: 1.5,3.5
       parent: 1
 - proto: SpawnPointLatejoin
   entities:
@@ -991,6 +1006,12 @@ entities:
     - type: Transform
       rot: 1.5707963267948966 rad
       pos: 0.5,4.5
+      parent: 1
+  - uid: 67
+    components:
+    - type: Transform
+      rot: 1.5707963267948966 rad
+      pos: 1.5,4.5
       parent: 1
 - proto: ThrusterNfsd
   entities:
@@ -1179,14 +1200,6 @@ entities:
       rot: 3.141592653589793 rad
       pos: 2.5,-4.5
       parent: 1
-- proto: WallWeaponCapacitorRechargerOmnidirectional
-  entities:
-  - uid: 55
-    components:
-    - type: Transform
-      rot: 3.141592653589793 rad
-      pos: 1.5,1.5
-      parent: 1
 - proto: WarpPointShip
   entities:
   - uid: 152
@@ -1194,6 +1207,14 @@ entities:
     - type: Transform
       rot: 1.5707963267948966 rad
       pos: 0.5,0.5
+      parent: 1
+- proto: WeaponCapacitorRecharger
+  entities:
+  - uid: 158
+    components:
+    - type: Transform
+      rot: 1.5707963267948966 rad
+      pos: 1.5,4.5
       parent: 1
 - proto: WindoorSecureSecurityLocked
   entities:
