--- a/Resources/Prototypes/_NF/Entities/Structures/base_structure.yml
+++ b/Resources/Prototypes/_NF/Entities/Structures/base_structure.yml
@@ -84,6 +84,8 @@
     arc: 180
   - type: Transform
     noRot: false
+  - type: Physics
+    canCollide: false
   - type: Fixtures
     fixtures: {}
 
