--- a/Resources/Prototypes/Entities/Objects/Tools/tools.yml
+++ b/Resources/Prototypes/Entities/Objects/Tools/tools.yml
@@ -485,10 +485,12 @@
   - type: Tool
     qualities:
       - Digging
+    speedModifier: 0.5 # Frontier
     useSound:
       path: /Audio/Nyanotrasen/Items/shovel_dig.ogg
-  - type: EarthDigging
-  - type: Shovel
+  # - type: EarthDigging # Frontier
+  # - type: Shovel # Frontier
+  - type: ToolTileCompatible # Frontier
 
 - type: entity
   parent: BaseItem
