make shovel shovel again (oops)

--- a/Resources/Prototypes/Entities/Objects/Tools/tools.yml
+++ b/Resources/Prototypes/Entities/Objects/Tools/tools.yml
@@ -489,7 +489,7 @@
     useSound:
       path: /Audio/Nyanotrasen/Items/shovel_dig.ogg
   # - type: EarthDigging # Frontier
-  # - type: Shovel # Frontier
+  - type: Shovel
   - type: ToolTileCompatible # Frontier
 
 - type: entity
