--- a/Resources/Prototypes/_NF/Entities/World/Debris/wrecks.yml
+++ b/Resources/Prototypes/_NF/Entities/World/Debris/wrecks.yml
@@ -142,6 +142,23 @@
             prob: 0.0025
           - id: Thruster
             prob: 0.005
+          # Medical bounty corpses (total weight: 0.02)
+          - id: SpawnRandomHumanoidCorpseMedicalBountyService
+            prob: 0.005
+          - id: SpawnRandomHumanoidCorpseMedicalBountyMusician
+            prob: 0.001
+          - id: SpawnRandomHumanoidCorpseMedicalBountyEngineering
+            prob: 0.003
+          - id: SpawnRandomHumanoidCorpseMedicalBountyCargo
+            prob: 0.0035
+          - id: SpawnRandomHumanoidCorpseMedicalBountyMedical
+            prob: 0.0025
+          - id: SpawnRandomHumanoidCorpseMedicalBountyScience
+            prob: 0.0025
+          - id: SpawnRandomHumanoidCorpseMedicalBountySecurity
+            prob: 0.002
+          - id: SpawnRandomHumanoidCorpseMedicalBountyCommand
+            prob: 0.0005
     - type: IFF
       flags: HideLabel
       color: "#88b0d1"
