--- a/Resources/Prototypes/_NF/Catalog/Fills/Lockers/locker_wallmount.yml
+++ b/Resources/Prototypes/_NF/Catalog/Fills/Lockers/locker_wallmount.yml
@@ -198,3 +198,24 @@
   parent: [ ClosetWallO2N2, StorageFillO2N2Random ]
   id: ClosetWallO2N2FilledRandom
   suffix: Filled, Random
+
+# Safety gear
+- type: entity
+  parent: [ LockerWallColorL1Fire, StorageFillL1FireSuit ]
+  id: LockerWallColorL1FireFilled
+  suffix: Frontier, Filled
+
+- type: entity
+  parent: [ LockerWallColorL2Radiation, StorageFillL2RadiationSuit ]
+  id: LockerWallColorL2RadiationFilled
+  suffix: Frontier, Filled
+
+- type: entity
+  parent: [ LockerWallColorL3Biohazard, StorageFillL3BiohazardSuit ]
+  id: LockerWallColorL3BiohazardFilled
+  suffix: Frontier, Filled
+
+- type: entity
+  parent: [ LockerWallColorL4Bomb, StorageFillL4BombSuit ]
+  id: LockerWallColorL4BombFilled
+  suffix: Frontier, Filled
