--- a/Resources/Prototypes/_NF/Entities/Structures/Wallmounts/shelfs.yml
+++ b/Resources/Prototypes/_NF/Entities/Structures/Wallmounts/shelfs.yml
@@ -3,7 +3,7 @@
   id: ShelfWallFreezerWhite
   parent: ShelfBaseReinforced
   name: wall freezer
-  description: Keeps all your chemicals safe and out of the clow- er, public hands!
+  description: A convenient place to store perishables.
   suffix: Frontier, White
   components:
   - type: Weldable
@@ -57,8 +57,8 @@
     - 0,6,5,6
     maxItemSize: Normal
   - type: Construction
-    graph: Shelf
-    node: ShelfChemistry
+    graph: WallFreezer
+    node: ShelfWallFreezerWhite
 
 - type: entity
   id: ShelfWallFreezerDark
@@ -82,3 +82,6 @@
     - state: welded
       visible: false
       map: ["enum.WeldableLayers.BaseWelded"]
+  - type: Construction
+    graph: WallFreezer
+    node: ShelfWallFreezerDark
