--- a/Resources/Prototypes/_NF/Maps/Outpost/frontier.yml
+++ b/Resources/Prototypes/_NF/Maps/Outpost/frontier.yml
@@ -18,6 +18,7 @@
         - type: ExtraStationInformation
           iconPath: /Textures/Logo/logo.png
           stationSubtext: 'frontier-lobby-frontier-subtext'
+          stationDescription: 'frontier-lobby-frontier-description'
         - type: StationJobs
           availableJobs:
             Contractor: [ -1, -1 ]
