--- a/Resources/Prototypes/_NF/PointsOfInterest/cove.yml
+++ b/Resources/Prototypes/_NF/PointsOfInterest/cove.yml
@@ -33,6 +33,7 @@
         - type: ExtraStationInformation
           iconPath: /Textures/_NF/Interface/Pirate/piratelogo.png
           stationSubtext: 'frontier-lobby-pirate-subtext'
+          stationDescription: 'frontier-lobby-pirate-description'
         - type: StationJobs
           availableJobs:
             PirateCaptain: [ 1, 1 ]
