--- a/Resources/Maps/_NF/Shuttles/Nfsd/templar.yml
+++ b/Resources/Maps/_NF/Shuttles/Nfsd/templar.yml
@@ -117,31 +117,47 @@ entities:
         tiles:
           0,0:
             0: 13079
-            1: 34944
+            2: 34944
           0,-1:
             0: 32563
-            1: 32904
+            2: 32904
           -1,0:
             0: 34828
-            1: 8736
+            2: 8736
           0,1:
-            0: 67
+            0: 3
+            1: 64
           -1,1:
-            0: 72
-            1: 2
+            0: 8
+            1: 64
           -1,-1:
             0: 52872
-            1: 8226
+            2: 8226
           0,-2:
-            1: 49152
+            2: 49152
           -1,-2:
-            1: 24576
+            2: 24576
         uniqueMixes:
         - volume: 2500
           temperature: 293.15
           moles:
           - 21.824879
           - 82.10312
+          - 0
+          - 0
+          - 0
+          - 0
+          - 0
+          - 0
+          - 0
+          - 0
+          - 0
+          - 0
+        - volume: 2500
+          temperature: 293.15
+          moles:
+          - 0
+          - 0
           - 0
           - 0
           - 0
@@ -215,6 +231,68 @@ entities:
     - type: Transform
       rot: -1.5707963267948966 rad
       pos: -2.5,-1.5
+      parent: 1
+- proto: AtmosFixBlockerMarker
+  entities:
+  - uid: 7
+    components:
+    - type: Transform
+      pos: -2.5,3.5
+      parent: 1
+  - uid: 96
+    components:
+    - type: Transform
+      pos: -2.5,2.5
+      parent: 1
+  - uid: 161
+    components:
+    - type: Transform
+      pos: 3.5,3.5
+      parent: 1
+  - uid: 162
+    components:
+    - type: Transform
+      pos: 3.5,2.5
+      parent: 1
+  - uid: 163
+    components:
+    - type: Transform
+      pos: 3.5,-3.5
+      parent: 1
+  - uid: 164
+    components:
+    - type: Transform
+      pos: 3.5,-4.5
+      parent: 1
+  - uid: 165
+    components:
+    - type: Transform
+      pos: 2.5,-4.5
+      parent: 1
+  - uid: 166
+    components:
+    - type: Transform
+      pos: -2.5,-4.5
+      parent: 1
+  - uid: 167
+    components:
+    - type: Transform
+      pos: -1.5,-4.5
+      parent: 1
+  - uid: 168
+    components:
+    - type: Transform
+      pos: -2.5,-3.5
+      parent: 1
+  - uid: 169
+    components:
+    - type: Transform
+      pos: 2.5,5.5
+      parent: 1
+  - uid: 170
+    components:
+    - type: Transform
+      pos: -1.5,5.5
       parent: 1
 - proto: Bed
   entities:
