Add lobby sort order to be able to arrange stations

--- a/Resources/Prototypes/_NF/Maps/Outpost/frontier.yml
+++ b/Resources/Prototypes/_NF/Maps/Outpost/frontier.yml
@@ -19,6 +19,7 @@
           iconPath: /Textures/Logo/logo.png
           stationSubtext: 'frontier-lobby-frontier-subtext'
           stationDescription: 'frontier-lobby-frontier-description'
+          lobbySortOrder: 1
         - type: StationJobs
           availableJobs:
             Contractor: [ -1, -1 ]
