--- a/Resources/Prototypes/_NF/PointsOfInterest/lodge.yml
+++ b/Resources/Prototypes/_NF/PointsOfInterest/lodge.yml
@@ -32,6 +32,7 @@
           iconPath: /Textures/_NF/Markers/jobs.rsi/mercenary.png
           stationSubtext: 'frontier-lobby-exped-subtext'
           stationDescription: 'frontier-lobby-exped-description'
+          lobbySortOrder: 3
         - type: StationJobs
           availableJobs:
             Pilot: [ -1, -1 ]
