--- a/Resources/Maps/_NF/Shuttles/Nfsd/templar.yml
+++ b/Resources/Maps/_NF/Shuttles/Nfsd/templar.yml
@@ -105,6 +105,30 @@ entities:
           decals:
             20: 2,0
         - node:
+            color: '#FFFFFFFF'
+            id: DirtHeavy
+          decals:
+            44: 2,0
+        - node:
+            color: '#FFFFFFFF'
+            id: DirtHeavyMonotile
+          decals:
+            42: 0,-4
+            43: -2,0
+            48: -2,-2
+        - node:
+            color: '#FFFFFFFF'
+            id: DirtLight
+          decals:
+            45: 1,0
+            46: -1,-2
+            47: 2,-2
+        - node:
+            color: '#FFFFFFFF'
+            id: DirtMedium
+          decals:
+            41: -1,-3
+        - node:
             color: '#FF9821FF'
             id: HalfTileOverlayGreyscale
           decals:
@@ -117,26 +141,26 @@ entities:
         tiles:
           0,0:
             0: 13079
-            2: 34944
+            1: 34944
           0,-1:
             0: 32563
-            2: 32904
+            1: 32904
           -1,0:
             0: 34828
-            2: 8736
+            1: 8736
           0,1:
             0: 3
-            1: 64
+            2: 64
           -1,1:
             0: 8
-            1: 64
+            2: 64
           -1,-1:
             0: 52872
-            2: 8226
+            1: 8226
           0,-2:
-            2: 49152
+            1: 49152
           -1,-2:
-            2: 24576
+            1: 24576
         uniqueMixes:
         - volume: 2500
           temperature: 293.15
@@ -154,7 +178,7 @@ entities:
           - 0
           - 0
         - volume: 2500
-          temperature: 293.15
+          immutable: True
           moles:
           - 0
           - 0
@@ -169,7 +193,7 @@ entities:
           - 0
           - 0
         - volume: 2500
-          immutable: True
+          temperature: 293.15
           moles:
           - 0
           - 0
@@ -1044,6 +1068,13 @@ entities:
       rot: 1.5707963267948966 rad
       pos: 1.5,3.5
       parent: 1
+- proto: SpawnDungeonLootMugs
+  entities:
+  - uid: 152
+    components:
+    - type: Transform
+      pos: 1.1626946,4.648044
+      parent: 1
 - proto: SpawnPointLatejoin
   entities:
   - uid: 153
@@ -1059,6 +1090,13 @@ entities:
     - type: Transform
       rot: 1.5707963267948966 rad
       pos: -1.5,2.5
+      parent: 1
+- proto: SuitStorageWallmountEVAPrisoner
+  entities:
+  - uid: 171
+    components:
+    - type: Transform
+      pos: 1.5,1.5
       parent: 1
 - proto: TableReinforced
   entities:
@@ -1281,11 +1319,10 @@ entities:
       parent: 1
 - proto: WarpPointShip
   entities:
-  - uid: 152
+  - uid: 172
     components:
     - type: Transform
-      rot: 1.5707963267948966 rad
-      pos: 0.5,0.5
+      pos: 0.5,-0.5
       parent: 1
 - proto: WeaponCapacitorRecharger
   entities:
