Max waste pump pressure

--- a/Resources/Maps/_NF/Shuttles/honker.yml
+++ b/Resources/Maps/_NF/Shuttles/honker.yml
@@ -944,7 +944,7 @@ entities:
       parent: 2
     - type: AtmosPipeColor
       color: '#0055CCFF'
-- proto: GasPressurePumpOn
+- proto: GasPressurePumpOnMax
   entities:
   - uid: 164
     components:
