--- a/Resources/Maps/_NF/Shuttles/stellaris.yml
+++ b/Resources/Maps/_NF/Shuttles/stellaris.yml
@@ -373,15 +373,6 @@ entities:
       - 569
       - 481
       - 601
-  - uid: 585
-    components:
-    - type: Transform
-      rot: 3.141592653589793 rad
-      pos: -3.5,-9.5
-      parent: 1
-    - type: DeviceList
-      devices:
-      - 598
   - uid: 586
     components:
     - type: Transform
@@ -479,6 +470,8 @@ entities:
       - 622
       - 450
       - 413
+      - 598
+      - 216
 - proto: Airlock
   entities:
   - uid: 192
@@ -601,6 +594,11 @@ entities:
       rot: 3.141592653589793 rad
       pos: -4.5,-7.5
       parent: 1
+    - type: DeviceNetwork
+      configurators:
+      - invalid
+      deviceLists:
+      - 591
   - uid: 599
     components:
     - type: Transform
@@ -643,7 +641,7 @@ entities:
   - uid: 217
     components:
     - type: Transform
-      rot: -1.5707963267948966 rad
+      rot: 1.5707963267948966 rad
       pos: 4.5,-7.5
       parent: 1
   - uid: 218
@@ -1790,6 +1788,11 @@ entities:
       rot: 3.141592653589793 rad
       pos: -4.5,-4.5
       parent: 1
+    - type: DeviceNetwork
+      configurators:
+      - invalid
+      deviceLists:
+      - 591
   - uid: 558
     components:
     - type: Transform
@@ -2709,6 +2712,9 @@ entities:
       pos: -5.5,-5.5
       parent: 1
     - type: DeviceNetwork
+      configurators:
+      - invalid
+      - invalid
       deviceLists:
       - 591
     - type: AtmosPipeColor
@@ -2784,6 +2790,9 @@ entities:
       pos: -3.5,-7.5
       parent: 1
     - type: DeviceNetwork
+      configurators:
+      - invalid
+      - invalid
       deviceLists:
       - 591
     - type: AtmosPipeColor
