Increase stellaris margin to ~7% at 47k appraisal

--- a/Resources/Prototypes/_NF/Shipyard/stellaris.yml
+++ b/Resources/Prototypes/_NF/Shipyard/stellaris.yml
@@ -2,7 +2,7 @@
   id: Stellaris
   name: NT Stellaris
   description: A mobile theatre perfect for putting on any show.
-  price: 48000 # Appraises for 45469, margin of 7% - TODO: fix this value, getting tests to pass - Whatstone
+  price: 50000 # Appraises for ~47000, margin of ~7% - TODO: fix this value, getting tests to pass - Whatstone
   category: Medium
   group: Shipyard
   shuttlePath: /Maps/_NF/Shuttles/stellaris.yml
