add jetpack to advanced magboots and add NFSD advanced magboots

--- a/Resources/Prototypes/_NF/Catalog/security_uplink_catalog.yml
+++ b/Resources/Prototypes/_NF/Catalog/security_uplink_catalog.yml
@@ -471,6 +471,22 @@
           - SecurityUplink
 
 - type: listing
+  id: UplinkSecurityMagbootsAdvanced
+  name:  uplink-security-magboots-advanced-name
+  description: uplink-security-magboots-advanced-desc
+  productEntity: ClothingShoesBootsMagNfsdAdv
+  icon: { sprite: _NF/Clothing/Shoes/Boots/magboots-combat.rsi, state: icon }
+  cost:
+    FrontierUplinkCoin: 3
+  categories:
+    - UplinkSecurityUtility
+  conditions:
+    - !type:StoreWhitelistCondition
+      whitelist:
+        tags:
+          - SecurityUplink
+
+- type: listing
   id: UplinkNfsdTechfab
   name:  uplink-security-techfab-name
   description: uplink-security-techfab-desc
