--- a/Resources/Prototypes/Entities/Clothing/Shoes/magboots.yml
+++ b/Resources/Prototypes/Entities/Clothing/Shoes/magboots.yml
@@ -41,7 +41,7 @@
   id: ClothingShoesBootsMag
 
 - type: entity
-  parent: [ClothingShoesBootsMagBase] # Frontier: removed BaseGrandTheftContraband
+  parent: [ClothingShoesBootsMagBase, BaseJetpack] # Frontier: removed BaseGrandTheftContraband, added BaseJetpack as parent
   id: ClothingShoesBootsMagAdv
   name: advanced magboots
   description: State-of-the-art magnetic boots that do not slow down their wearer.
@@ -58,10 +58,22 @@
     tags:
     - WhitelistChameleon
     - HighRiskItem
+  - type: GasTank #Frontier extra component for the jetpack fun
+    outputPressure: 42.6
+    air:
+      # 2 minutes of thrust
+      volume: 0.75
+      temperature: 293.15
+      moles:
+        - 0.153853429 # oxygen
+        - 0.153853429 # nitrogen
   - type: StaticPrice
     price: 200 # Frontier: 750<200
   - type: StealTarget
     stealGroup: ClothingShoesBootsMagAdv
+  - type: Item #ugly solution used on the syndicate ones to not show the jetpack sprite
+    sprite: null
+    size: Normal
 
 - type: entity
   parent: [ClothingShoesBootsMagBase]
