actually make them more expensive to produce

--- a/Resources/Prototypes/_NF/Recipes/Lathes/eva.yml
+++ b/Resources/Prototypes/_NF/Recipes/Lathes/eva.yml
@@ -452,10 +452,10 @@
     Durathread: 2000
     Silver: 2000
     Gold: 1000
-    
+
 - type: latheRecipe
   id: ClothingOuterHardsuitPrivateSecurity
-  result: ClothingOuterHardsuitPrivateSecurity  
+  result: ClothingOuterHardsuitPrivateSecurity
   category: EVASuits
   completetime: 4
   materials:
@@ -600,6 +600,8 @@
   completetime: 12
   materials:
     Silver: 1000
+    Plasteel: 500
+    Durathread: 500
     Gold: 500
 
 - type: latheRecipe
