--- a/Resources/Prototypes/_NF/Entities/Structures/Furniture/tables.yml
+++ b/Resources/Prototypes/_NF/Entities/Structures/Furniture/tables.yml
@@ -8,7 +8,7 @@
   # Table bits
   - type: Clickable
   - type: InteractionOutline
-  - type: Climbable
+  # - type: Climbable # Pointless without player-table collision, but I'll keep it
   - type: PlaceableSurface
   - type: Physics
     bodyType: Dynamic
