--- a/Resources/Prototypes/_NF/Recipes/Construction/Graphs/furniture/shelfs.yml
+++ b/Resources/Prototypes/_NF/Recipes/Construction/Graphs/furniture/shelfs.yml
@@ -18,6 +18,9 @@
             - material: Glass
               amount: 5
               doAfter: 2
+            - material: Plastic
+              amount: 5
+              doAfter: 2
             - material: Cable
               amount: 3
               doAfter: 1
@@ -30,6 +33,9 @@
             - !type:EmptyAllContainers
             - !type:SpawnPrototype
                 prototype: SheetPlasteel1
+                amount: 5
+            - !type:SpawnPrototype
+                prototype: SheetPlastic1
                 amount: 5
             - !type:SpawnPrototype
                 prototype: SheetGlass1
@@ -54,6 +60,9 @@
             - material: Glass
               amount: 5
               doAfter: 2
+            - material: Plastic
+              amount: 5
+              doAfter: 2
             - material: Cable
               amount: 3
               doAfter: 1
@@ -66,6 +75,9 @@
             - !type:EmptyAllContainers
             - !type:SpawnPrototype
                 prototype: SheetPlasteel1
+                amount: 5
+            - !type:SpawnPrototype
+                prototype: SheetPlastic1
                 amount: 5
             - !type:SpawnPrototype
                 prototype: SheetGlass1
