--- a/Resources/Prototypes/_NF/Entities/Structures/Wallmounts/shelfs.yml
+++ b/Resources/Prototypes/_NF/Entities/Structures/Wallmounts/shelfs.yml
@@ -15,7 +15,7 @@
     - state: base
       map: ["enum.StorageVisualLayers.Base"]
     - state: food-0
-    - map: ["enum.StorageFillLayers.Fill"]
+      map: ["enum.StorageFillLayers.Fill"]
     - state: closed
       map: ["enum.StorageVisualLayers.Door"]
     - state: locked
@@ -36,14 +36,14 @@
       - !type:SpawnEntitiesBehavior
         spawn:
           SheetPlasteel1:
-            min: 1
-            max: 2
+            min: 0
+            max: 3
           SheetPlastic1:
-            min: 1
-            max: 2
+            min: 0
+            max: 3
           ShardGlass:
-            min: 1
-            max: 1
+            min: 0
+            max: 3
       - !type:DoActsBehavior
         acts: ["Destruction"]
   - type: Storage
@@ -68,7 +68,7 @@
       map: ["enum.StorageVisualLayers.Base"]
       color: "#909090"
     - state: food-0
-    - map: ["enum.StorageFillLayers.Fill"]
+      map: ["enum.StorageFillLayers.Fill"]
     - state: closed
       map: ["enum.StorageVisualLayers.Door"]
       color: "#909090"
